@@ -164,6 +164,7 @@
                     <excludes>
                         <exclude>**/*IT.java</exclude>
                     </excludes>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
